--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <div class="navigation">
 	<div class="navbar">
 	<img class="logo" src="Bilder/Logo.png">
-	<a href="learnpython.ch/Grundlagen" class="linkselected">Die Grundlagen des Programmierens</a>
-	<a href="learnpython.ch/IDE" class="link">Die Entwicklungsumgebung</a>
+	<a href="learnpython.ch/Grundlagen" class="link">Die Grundlagen des Programmierens</a>
+	<a href="learnpython.ch/IDE" class="linkselected">Die Entwicklungsumgebung</a>
 	<a href="learnpython.ch/Erste_Schritte" class="link">Erste Schritte</a>
 	<a href="learnpython.ch/Aufbau" class="link">Die Struktur eines Quellcodes</a>	
 	<a href="learnpython.ch/Schleifenundverzweigungen" class="link">Schleifen und Verzweigungen</a>
@@ -29,63 +29,14 @@
 	</div>
 </div>
 <div class=main>
+</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
 	<div class="heading">
-		<h1>Programmieren</h1>
+		<h1>Under Construction</h1>
 	</div>
 	<div class="übertitel">
-		<h3>Was bedeutet Programmieren ?</h3>
+		<h3>Coming soon!</h3>
 	</div>
-	<div class="text"> 
-		<p>Dieser Kurs soll euch bei dem Einstieg in das Programmieren, mithilfe der Programmiersprache Python, erleichtern.
-			Doch, was bedeutet eigentlich "Programmieren"? 
-			Einfach gesagt bedeutet programmieren das Erstellen von Software.
-			Dies funktioniert über eine Programmiersprache, in unserem Fall Python.
-			Computer können nämlich nur mit sogenanntem Maschinensprache/Binärcode arbeiten.
-			Also "übersetzt" Python die verschiedenen Befehle in Binärcode, welcher dann der Computer (genauer gesagt der Prozessor) ausführen kann. Doch leider versteht Python nicht, wenn man ihm sagt: "was ist 1+1?".
-			Python ist nämlich eine eigene Sprache, mit eigenen Befehlen, welche allerdings sehr offensichtlich und leicht verständlich sind, wenn man grundlegende englische Begriffe versteht. Ein Beispiel dafür wäre die "If" Bedingung.
-			Die deutsche Übersetzung des Wortes "If" ist "Wenn". 
-			Bei einer "If" Anweisung überprüft Python eine Bedingung. Wenn diese Wahr ist wird eine bestimmte Anweisung ausgeführt, sonst eine andere.
-			Also stimmmt die triviale deutsche Übersetzung stark mit der Funktionsweise überein. 
-			Zu den "If-Statements" kommen wir allerdings erst später.</p>
-	</div>
-	<div class="achtungheader">
-	<p>Achtung!</p>
-	</div>
-	<div class="achtung">
-	<p>Wenn du einen Begriff nicht verstehst, schaue am Ende der Seite nach. Dort werden die schwierigen Worte noch einmal erklärt.</p>
-	</div>
-	<div class="übertitel">
-		<h3>Welche Programmiersprachen gibt es?</h3>
-	</div>
-	<div class="text">
-		<p>Es gibt tausende verschiedene Programmiersprachen, welche alle ihre eigenen Vor- und Nachteile haben.
-		Zu den meist verbreiteten Programmiersprachen zählen die Programmiersprache C, beziehungsweise ihre Weiterentwicklungen C++ und C#, Java und auch Python.  sind die meist verbreiteten Programmiersprachen und so ist zum Beispiel ein Großteil von Windows und dem Mac OS X Betriebssystem in diesen Programmiersprachen geschrieben.
-		Java wird vor allem im Internet und Multimediaanwendungen eingesetzt.
-		Sie ist auch die verbreiteste Programmiersprache für Mobilgeräte.
-		Python ist so verbreitet, weil sein Anwendungsspektrum sehr breit ist und es für Anfänger sehr leicht verständlich ist.
-		Ausserdem ist die Anwendung und der Quellcode kostenlos erhältlich, deshalb ist sie auch auf fast allen Betriebssystemen vorhanden.</p>
-	</div>
-	<div class="question">
-	<p>Wie viele Programmiersprachen gibt es?<p>
-	</div>
-	</br>
-	<div class="answers">
-	<input class="buttons" type="button" name="button1" value="" id="false" onclick="Question('button1')"><label class="answer" id="answer1"> Es gibt 2 offizielle Programmiersprachen: Python und C</label></br></br>
-	<input class="buttons" type="button" name="button2" value="" id="false" onclick="Question('button2')"><label class="answer" id="answer2"> Es gibt 5: Java, Python, C, C# und C++</label></br></br>
-	<input class="buttons" type="button" name="button3" value="" id="true" onclick="Question('button3')"><label class="answer" id="answer3"> Es gibt tausende verschiedene Programmiersprachen</label></br></br>
-	<input class="buttons" type="button" name="button4" value="" id="false" onclick="Question('button4')"><label class="answer" id="answer4">Es gibt 3: Java, Python und C</label> </br></br>	
-	</div>
-	<div>
-	<input class="nextlocked" type="button" id="next" value="Aufgabe noch nicht richtig gelöst.">
-	</div>
-	<div class="übertitel">
-	<h2>Begriffserklärungen</h2>
-	</div>
-<div class="Begriffserklärungen">
-	<p class="Begriffe">Software: Der Teil des Computers den man nicht anfassen kann. Software (syn. Programm) kann von einem Computer ausgeführt werden und sagt bestimmter Hardware (Sachen die man anfassen kann) was sie wie zu erledigen bzw. zu berechnen hat. <p>
-	<p class="Begriffe">Binärcode/Maschinensprache: Maschinensprache besteht aus zwei "Zeichen" 1 und 0. Dies da der Computer nur 2 Zustände kennt: Strom fliesst (1), beziehungsweise kein Strom fliesst (0). Diese Maschinensprache kann dann von einem Computer ausgeführt werden. <p>
-	<p class="Begriffe">Quellcode: Ein Text, welcher in einer Programmiersprache geschrieben worden ist und von Menschen gelesen werden kann. Der Computer kann die verschiedenen Befehle einer Programmiersprache in sogenannter Maschinensprache übersetzten, welche dann von einem Computer ausgeführt werden kann. <p>
-	</div>
+</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
 	<div class="end" id="end">
 	<img class="img" src="Bilder/Logo.png">
 	<span>LearnPython.ch ist eine öffentliche Website, welche primär für die Schüler der Kantonsschule Zug zur Verfügung steht. Wir übernehmen keine Haftung für allfällige Fehler des Inhaltes und den daraus entstehenden Schäden.<br>Copyright &copy; Yves Bischofberger 2017</p>
