--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 	<meta name="author" content="Yves Bischofberger">
 	<meta charset="utf-8">
 	<meta name="keywords" content="Python, KSZ, lernen, Code, Yves Bischofberger">
-	<script src="CSS_JSS/script.js"></script>
+	<script src="CSS_JSS/scriptide.js"></script>
 </head>
 <body>
 <div class="navigation">
 	<div class="navbar">
-	<a href="/index">
 	<img class="logo" src="Bilder/Logo.png">
-	</a>
 	<a href="/Grundlagen" class="link">Die Grundlagen des Programmierens</a>
 	<a href="/IDE" class="linkselected">Die Entwicklungsumgebung</a>
 	<a href="/Erste_Schritte" class="link">Erste Schritte</a>
@@ -27,18 +25,78 @@
 	<a href="/AboutMe" class="link">About LearnPythonKSZ</a>
 	</div>
 	<div class="glossar">
-	<a href="learnpython.ch/Glossar" class="linkglossar">Glossar</a>
+	<a href="/Glossar" class="linkglossar">Glossar</a>
 	</div>
 </div>
 <div class=main>
-</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
 	<div class="heading">
-		<h1>Under Construction</h1>
+		<h1>Die Integrierte Programmierentwicklung</h1>
 	</div>
 	<div class="übertitel">
-		<h3>Coming soon!</h3>
+		<h3>Was ist eine IDE (Integrierte Programmierentwicklung)?</h3>
 	</div>
-</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+	<div class="text"> 
+		<p>Eine Integrated Development Environment (DIE) ist sozusagen das Word des Programmierens. Es sammelt die wichtigsten Werkzeuge für das erstellen von Programmiersoftware. Doch anstelle von Schriftgrösse, Schriftfarbe und die automatische Rechtschreibprüfung finden sich Programmierrelevantere Werkzeuge wie zum Beispiel das farbliche Hervorheben von bestimmten Befehlen oder eine Befehlsprüfung mit Vervollständigungsmöglichkeiten. Ein Editor besteht normalerweise aus einem Editor, Compiler/Interpreter, Linker, Debugger und einem GUI. Falls du noch keinen dieser Begriffe verstehst, keine Angst, sie werden jetzt erklärt. </p>
+	</div>
+	<div class="achtungheader">
+	<p>Achtung!</p>
+	</div>
+	<div class="achtung">
+	<p>Die wichtigsten Begriffe werden am <a href="#Begriffserklärungen">Seitenende</a> und Im <a href="/Glossar">Glossar</a> erklärt.</p>
+	</div>
+	</br>
+	<div class="text">
+		<p>Ein Editor ist, wie der Name schon impliziert, eine Anwendung in welcher man Text bearbeiten kann. Ein Compiler bzw. Interpreter übersetzt den von uns geschriebenen Programmtext in Maschinensprache, da der Computer nur mit Maschinensprache arbeiten kann. Der einzig grosse Unterschied zwischen einem Compiler und einem Interpreter ist, dass der Compiler den ganzen Programmtext auf einmal übersetzt, während der Interpreter den Programmtext Stück für Stück in Maschinencode übersetzt. Der Linker verbindet die einzelnen Programmmodule zu einem lauffähigen Programm. Die Aufgabe des Debuggers ist es Fehler im Programmcode zu erkennen und sie dem Benutzer mitzuteilen. Bei manchen Entwicklungsumgebungen zeigt es die Fehler, oft farbig markiert, direkt im Quellcode auf. Das Graphical User Interface (GUI) ist lediglich eine grafische Oberfläche, welche das Arbeiten mit dem Programm erleichtert. Dies erreicht das GUI mithilfe von verschiedenen Leisten, Knöpfen oder anderen Steuerelementen.  </p>
+	</div>
+	</br></br></br>
+		<div class="übertitel">
+		<h3>Die Empfehlenswerteste Python Entwicklungsumgebung</h3>
+	</div>
+	<div class="text">
+		<p>Es gibt viele verschiedene Entwicklungsumgebungen. Welche man Schlussendlich benutzt ist Geschmackssache, es gibt keine "beste" IDE. Für Anfänger ist die offiziell Python IDE zu empfehlen. Es hat viele Funktionen, welcher der Übersichtlichkeit des Quelltextes helfen. Dies ist, besonders für einen Anfänger, sicherlich nicht verkehrt. Zum Beispiel färbt die IDLE die verschiedenen Befehle mit verschiedenen Farben ein. Man kann es hier(Hyperlink: https://www.python.org/downloads/) herunterladen. </p>
+	</div>
+		</br></br></br>
+		<div class="übertitel">
+		<h3>Erste Schritte mit der Python-IDLE</h3>
+	</div>
+	<div class="text">
+		<p>Wenn ihr nach der Installation die Entwicklerumgebung nun öffnet (ihr könnt unter Windows nach "IDLE suchen und diese dann öffnen) findet ihr euch in der sogenannten Shell wieder. Die Shell ist normalerweise für den Anfang ganz in Ordnung, da man allerdings nur eine Linie eingeben kann. Wenn man in naher Zukunft auch vollwertige Programme programmieren möchte sollte man früher oder später vollwertige Programme schreiben und mit richtigen Quellcodes arbeiten will, sollte man mit dem Editor arbeitet. Wenn ihr ein bereits erstelltes Dokument mit dem Editor bearbeiten wollt drückt ihr Control + O (oder über den Reiter File --> Open...) oder wenn ihr ein neues Dokument erstellen wollt müsst ihr, Control + N (oder File --> New File) drücken.  Jetzt seid ihr bereit, euer erstes Programm zu schreiben!
+ </p>
+	</div>
+
+	<div class="question">
+	<p>Wo liegt der Unterschied zwischen der Shell und dem normalen Editor?</p>
+	</div>
+	</br>
+	<div id="question1" value="unsolved" class="answers">
+	<input class="buttons" type="button" name="button1" value="" id="false" onclick="Question('button1')"><label class="answer" id="answer1">Die Shell ist der übergreifende Begriff(die Schale) der IDEs und damit auch des Editors.</label></br></br>
+	<input class="buttons" type="button" name="button2" value="" id="false" onclick="Question('button2')"><label class="answer" id="answer2">Man kann beim Editor seine Arbeit nicht speichern</label></br></br>
+	<input class="buttons" type="button" name="button3" value="" id="false" onclick="Question('button3')"><label class="answer" id="answer3">Im gegensatz zum Editor kommt bei der Shell ein Interpreter zum Einsatz.</label></br></br>
+	<input class="buttons" type="button" name="button4" value="" id="true" onclick="Question('button4')"><label class="answer" id="answer4">Man kann bei der Shell nur eine Linie/Befehl auf einmal eingeben.</label> </br></br>	
+	</div>
+	<div class="question">
+	<p>Welchen Reiter müsstest du auswählen wenn du in der Python IDE ein bereits bestehender Sourcecode bearbeiten möchten würdest.</p>
+	</div>
+	<div id="question2" class="imagemap">
+	<div class="imagecontainer">
+	<img src="Bilder/idle.png" usemap="#IDEmap">
+	</div>
+<map name ="IDEmap">
+	<area shape="rect" coords="0,19,38,44" onclick="rightanswer2()">
+	<area shape="rect" coords="39,19,315,43">
+	</map>
+	</div>
+	<div>
+	<input class="nextlocked" type="button" id="next" value="Aufgabe noch nicht richtig gelöst." href="/Erste_Schritte">
+	</div>
+	<div class="übertitel">
+	<h2>Begriffserklärungen</h2>
+	</div>
+<div id="Begriffserklärungen" class="Begriffserklärungen">
+	<p class="Begriffe">IDE: Entwicklungsumgebung in welcher die wichtigsten Werkzeuge und Hilfsmittel gesammelt sind um das Schreiben von Programmen zu ermöglichen bzw. zu erleichtern.<p>
+	<p class="Begriffe">Binärcode/Maschinensprache: Maschinensprache besteht aus zwei "Zeichen" 1 und 0. Dies da der Computer nur 2 Zustände kennt: Strom fliesst (1), beziehungsweise kein Strom fliesst (0). Diese Maschinensprache kann dann von einem Computer ausgeführt werden. <p>
+	<p class="Begriffe">Quellcode: Ein Text, welcher in einer Programmiersprache geschrieben worden ist und von Menschen gelesen werden kann. Der Computer kann die verschiedenen Befehle einer Programmiersprache in sogenannter Maschinensprache übersetzten, welche dann von einem Computer ausgeführt werden kann. <p>
+	</div>
 	<div class="end" id="end">
 	<img class="img" src="Bilder/Logo.png">
 	<span>LearnPython.ch ist eine öffentliche Website, welche primär für die Schüler der Kantonsschule Zug zur Verfügung steht. Wir übernehmen keine Haftung für allfällige Fehler des Inhaltes und den daraus entstehenden Schäden.<br>Copyright &copy; Yves Bischofberger 2017</p>
