--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<a href="/IDE" class="linkselected">Die Entwicklungsumgebung</a>
 	<a href="/Erste_Schritte" class="link">Erste Schritte</a>
 	<a href="/Aufbau" class="link">Die Struktur eines Quellcodes</a>	
-	<a href="/Schleifenundverzweigungen" class="link">Schleifen und Verzweigungen</a>
+	<a href="/Schleifenundverzweigungen" class="link">If-Verzweigungen und For-/While-Schleifen</a>
 	<a href="/Operatoren" class="link">Operatoren</a>
 	<a href="/ifelse" class="link">If/else</a>
 	<a href="/AboutMe" class="link">About LearnPythonKSZ</a>
