--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 	<area shape="rect" coords="39,19,315,43">
 	</map>
 	</div>
-	<div>
+	<a href="/Erste_Schritte">
 	<input class="nextlocked" type="button" id="next" value="Aufgabe noch nicht richtig gelöst." href="/Erste_Schritte">
-	</div>
+	</a>
 	<div class="übertitel">
 	<h2>Begriffserklärungen</h2>
 	</div>
