--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	<input class="buttons" type="button" name="button3" value="" id="false" onclick="Question('button3')"><label class="answer" id="answer3">Im gegensatz zum Editor kommt bei der Shell ein Interpreter zum Einsatz.</label></br></br>
 	<input class="buttons" type="button" name="button4" value="" id="true" onclick="Question('button4')"><label class="answer" id="answer4">Man kann bei der Shell nur eine Linie/Befehl auf einmal eingeben.</label> </br></br>	
 	</div>
-	<div class="question">
+	<div class="question" id="question">
 	<p>Welchen Reiter müsstest du auswählen wenn du in der Python IDE ein bereits bestehender Sourcecode bearbeiten möchten würdest.</p>
 	</div>
 	<div id="question2" class="imagemap">
@@ -86,7 +86,7 @@
 	<area shape="rect" coords="39,19,315,43">
 	</map>
 	</div>
-	<a href="/Erste_Schritte">
+	<a href="#question" id="buttonhref">
 	<input class="nextlocked" type="button" id="next" value="Aufgabe noch nicht richtig gelöst." href="/Erste_Schritte">
 	</a>
 	<div class="übertitel">
