--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Yves Bischofberger">
 	<meta charset="utf-8">
 	<meta name="keywords" content="Python, KSZ, lernen, Code, Yves Bischofberger">
-	<script src="CSS_JSS/scriptide.js"></script>
+	<script src="CSS_JSS/script.js"></script>
 </head>
 <body>
 <div class="navigation">
