--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<img class="logo" src="Bilder/Logo.png">
 	<a href="/Grundlagen" class="link">Die Grundlagen des Programmierens</a>
 	<a href="/IDE" class="linkselected">Die Entwicklungsumgebung</a>
-	<a href="/Erste_Schritte" class="link">Erste Schritte</a>	
+	<a href="/Erste_Schritte" class="link">Erste Schritte</a>
+	<a href="/Struktur" class="link">Strukturierung eines Programmcodes</a>	
 	<a href="/Schleifenundverzweigungen" class="link">If-Verzweigungen und For-/While-Schleifen</a>
 	<a href="/AboutMe" class="link">About LearnPythonKSZ</a>
 	</div>
