--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<img src="Bilder/idle.png" usemap="#IDEmap">
 	</div>
 <map name ="IDEmap">
-	<area shape="rect" coords="0,19,38,44" onclick="rightanswer2()">
+	<area shape="rect" coords="0,19,38,44" onclick="imagemapsolved2()">
 	<area shape="rect" coords="39,19,315,43">
 	</map>
 	</div>
