--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="keywords" content="Python, KSZ, lernen, Code, Yves Bischofberger">
 	<script src="CSS_JSS/script.js"></script>
 </head>
-<body>
+<body onload="number()">
 <div class="navigation">
 	<div class="navbar">
 	<img class="logo" src="Bilder/Logo.png">
