--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	</div>
 
 	<div class="question">
-	<p>Wo liegt der Unterschied zwischen der Shell und dem normalen Editor?</p>
+	<p>Wo liegt der Unterschied zwischen der Shell und dem normalen Editor? (max. 1P.)</p>
 	</div>
 	</br>
 	<div id="question1" value="unsolved" class="answers">
@@ -73,7 +73,7 @@
 	<input class="buttons" type="button" name="button4" value="" id="true" onclick="Question('button4')"><label class="answer" id="answer4">Man kann bei der Shell nur eine Linie/Befehl auf einmal eingeben.</label> </br></br>	
 	</div>
 	<div class="question" id="question">
-	<p>Welchen Reiter müsstest du auswählen wenn du in der Python IDE ein bereits bestehender Sourcecode bearbeiten möchten würdest.</p>
+	<p>Welchen Reiter müsstest du auswählen wenn du in der Python IDE ein bereits bestehender Sourcecode bearbeiten möchten würdest. (max. 1P.)</p>
 	</div>
 	<div id="question2" class="imagemap">
 	<div class="imagecontainer">
