--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<h3>Was ist eine IDE (Integrierte Programmierentwicklung)?</h3>
 	</div>
 	<div class="text"> 
-		<p>Eine Integrated Development Environment (DIE) ist sozusagen das Word des Programmierens. Es sammelt die wichtigsten Werkzeuge für das erstellen von Programmiersoftware. Doch anstelle von Schriftgrösse, Schriftfarbe und die automatische Rechtschreibprüfung finden sich Programmierrelevantere Werkzeuge wie zum Beispiel das farbliche Hervorheben von bestimmten Befehlen oder eine Befehlsprüfung mit Vervollständigungsmöglichkeiten. Ein Editor besteht normalerweise aus einem Editor, Compiler/Interpreter, Linker, Debugger und einem GUI. Falls du noch keinen dieser Begriffe verstehst, keine Angst, sie werden jetzt erklärt. </p>
+		<p>Eine Integrated Development Environment (IDE) ist sozusagen das Word des Programmierens. Es sammelt die wichtigsten Werkzeuge für das erstellen von Programmiersoftware. Doch anstelle von Schriftgrösse, Schriftfarbe und die automatische Rechtschreibprüfung finden sich Programmierrelevantere Werkzeuge wie zum Beispiel das farbliche Hervorheben von bestimmten Befehlen oder eine Befehlsprüfung mit Vervollständigungsmöglichkeiten. Eine <a  href=#ide><span style="color:blue">Entwicklungsumgebung</span></a> besteht normalerweise aus einem Editor, Compiler/Interpreter, Linker, Debugger und einem GUI. Falls du noch keinen dieser Begriffe verstehst, keine Angst, sie werden jetzt erklärt. </p>
 	</div>
 	<div class="achtungheader">
 	<p>Achtung!</p>
@@ -44,21 +44,21 @@
 	</div>
 	</br>
 	<div class="text">
-		<p>Ein Editor ist, wie der Name schon impliziert, eine Anwendung in welcher man Text bearbeiten kann. Ein Compiler bzw. Interpreter übersetzt den von uns geschriebenen Programmtext in Maschinensprache, da der Computer nur mit Maschinensprache arbeiten kann. Der einzig grosse Unterschied zwischen einem Compiler und einem Interpreter ist, dass der Compiler den ganzen Programmtext auf einmal übersetzt, während der Interpreter den Programmtext Stück für Stück in Maschinencode übersetzt. Der Linker verbindet die einzelnen Programmmodule zu einem lauffähigen Programm. Die Aufgabe des Debuggers ist es Fehler im Programmcode zu erkennen und sie dem Benutzer mitzuteilen. Bei manchen Entwicklungsumgebungen zeigt es die Fehler, oft farbig markiert, direkt im Quellcode auf. Das Graphical User Interface (GUI) ist lediglich eine grafische Oberfläche, welche das Arbeiten mit dem Programm erleichtert. Dies erreicht das GUI mithilfe von verschiedenen Leisten, Knöpfen oder anderen Steuerelementen.  </p>
+		<p>Ein Editor ist, wie der Name schon impliziert, eine Anwendung in welcher man Text bearbeiten kann. Ein Compiler bzw. Interpreter übersetzt den von uns geschriebenen Programmtext in Maschinensprache, da der Computer nur mit Maschinensprache arbeiten kann. Der einzig grosse Unterschied zwischen einem Compiler und einem Interpreter ist, dass der Compiler den ganzen Programmtext auf einmal übersetzt, während der Interpreter den Programmtext Stück für Stück in Maschinencode übersetzt. Der Linker verbindet die einzelnen Programmmodule zu einem lauffähigen Programm. Die Aufgabe des Debuggers ist es Fehler im Programmcode zu erkennen und sie dem Benutzer mitzuteilen. Bei manchen Entwicklungsumgebungen zeigt es die Fehler, oft farbig markiert, direkt im <a  href=#quellcode><span style="color:blue">Quellcode</span></a> auf. Das Graphical User Interface (GUI) ist lediglich eine grafische Oberfläche, welche das Arbeiten mit dem Programm erleichtert. Dies erreicht das GUI mithilfe von verschiedenen Leisten, Knöpfen oder anderen Steuerelementen.  </p>
 	</div>
 	</br></br></br>
 		<div class="übertitel">
 		<h3>Die Empfehlenswerteste Python Entwicklungsumgebung</h3>
 	</div>
 	<div class="text">
-		<p>Es gibt viele verschiedene Entwicklungsumgebungen. Welche man Schlussendlich benutzt ist Geschmackssache, es gibt keine "beste" IDE. Für Anfänger ist die offiziell Python IDE zu empfehlen. Es hat viele Funktionen, welcher der Übersichtlichkeit des Quelltextes helfen. Dies ist, besonders für einen Anfänger, sicherlich nicht verkehrt. Zum Beispiel färbt die IDLE die verschiedenen Befehle mit verschiedenen Farben ein. Man kann es hier(Hyperlink: https://www.python.org/downloads/) herunterladen. </p>
+		<p>Es gibt viele verschiedene Entwicklungsumgebungen. Welche man Schlussendlich benutzt ist Geschmackssache, es gibt keine "beste" <a  href=#ide><span style="color:blue">IDE</span></a>. Für Anfänger ist die offiziell Python <a  href=#ide><span style="color:blue">IDE</span></a> zu empfehlen. Es hat viele Funktionen, welcher der Übersichtlichkeit des Quelltextes helfen. Dies ist, besonders für einen Anfänger, sicherlich nicht verkehrt. Zum Beispiel färbt die IDLE die verschiedenen Befehle mit verschiedenen Farben ein. Man kann es hier(Hyperlink: https://www.python.org/downloads/) herunterladen. </p>
 	</div>
 		</br></br></br>
 		<div class="übertitel">
 		<h3>Erste Schritte mit der Python-IDLE</h3>
 	</div>
 	<div class="text">
-		<p>Wenn ihr nach der Installation die Entwicklerumgebung nun öffnet (ihr könnt unter Windows nach "IDLE suchen und diese dann öffnen) findet ihr euch in der sogenannten Shell wieder. Die Shell ist normalerweise für den Anfang ganz in Ordnung, da man allerdings nur eine Linie eingeben kann. Wenn man in naher Zukunft auch vollwertige Programme programmieren möchte sollte man früher oder später vollwertige Programme schreiben und mit richtigen Quellcodes arbeiten will, sollte man mit dem Editor arbeitet. Wenn ihr ein bereits erstelltes Dokument mit dem Editor bearbeiten wollt drückt ihr Control + O (oder über den Reiter File --> Open...) oder wenn ihr ein neues Dokument erstellen wollt müsst ihr, Control + N (oder File --> New File) drücken.  Jetzt seid ihr bereit, euer erstes Programm zu schreiben!
+		<p>Wenn ihr nach der Installation die Entwicklungsumgebung nun öffnet (ihr könnt unter Windows nach "IDLE suchen und diese dann öffnen) findet ihr euch in der sogenannten Shell wieder. Die Shell ist normalerweise für den Anfang ganz in Ordnung, da man allerdings nur eine Linie eingeben kann. Wenn man in naher Zukunft auch vollwertige Programme programmieren möchte sollte man früher oder später vollwertige Programme schreiben und mit richtigen <a  href=#quellcode><span style="color:blue">Quellcode</span></a> arbeiten will, sollte man mit dem Editor arbeitet. Wenn ihr ein bereits erstelltes Dokument mit dem Editor bearbeiten wollt drückt ihr Control + O (oder über den Reiter File --> Open...) oder wenn ihr ein neues Dokument erstellen wollt müsst ihr, Control + N (oder File --> New File) drücken.  Jetzt seid ihr bereit, euer erstes Programm zu schreiben!
  </p>
 	</div>
 
@@ -67,7 +67,7 @@
 	</div>
 	</br>
 	<div id="question1" value="unsolved" class="answers">
-	<input class="buttons" type="button" name="button1" value="" id="false" onclick="Question('button1')"><label class="answer" id="answer1">Die Shell ist der übergreifende Begriff(die Schale) der IDEs und damit auch des Editors.</label></br></br>
+	<input class="buttons" type="button" name="button1" value="" id="false" onclick="Question('button1')"><label class="answer" id="answer1">Die Shell ist der übergreifende Begriff(die Schale) der .s und damit auch des Editors.</label></br></br>
 	<input class="buttons" type="button" name="button2" value="" id="false" onclick="Question('button2')"><label class="answer" id="answer2">Man kann beim Editor seine Arbeit nicht speichern</label></br></br>
 	<input class="buttons" type="button" name="button3" value="" id="false" onclick="Question('button3')"><label class="answer" id="answer3">Im gegensatz zum Editor kommt bei der Shell ein Interpreter zum Einsatz.</label></br></br>
 	<input class="buttons" type="button" name="button4" value="" id="true" onclick="Question('button4')"><label class="answer" id="answer4">Man kann bei der Shell nur eine Linie/Befehl auf einmal eingeben.</label> </br></br>	
@@ -94,9 +94,8 @@
 	<h2>Begriffserklärungen</h2>
 	</div>
 <div id="Begriffserklärungen" class="Begriffserklärungen">
-	<p class="Begriffe">IDE: Entwicklungsumgebung in welcher die wichtigsten Werkzeuge und Hilfsmittel gesammelt sind um das Schreiben von Programmen zu ermöglichen bzw. zu erleichtern.<p>
-	<p class="Begriffe">Binärcode/Maschinensprache: Maschinensprache besteht aus zwei "Zeichen" 1 und 0. Dies da der Computer nur 2 Zustände kennt: Strom fliesst (1), beziehungsweise kein Strom fliesst (0). Diese Maschinensprache kann dann von einem Computer ausgeführt werden. <p>
-	<p class="Begriffe">Quellcode: Ein Text, welcher in einer Programmiersprache geschrieben worden ist und von Menschen gelesen werden kann. Der Computer kann die verschiedenen Befehle einer Programmiersprache in sogenannter Maschinensprache übersetzten, welche dann von einem Computer ausgeführt werden kann. <p>
+	<p class="Begriffe" id="ide">IDE: Entwicklungsumgebung in welcher die wichtigsten Werkzeuge und Hilfsmittel gesammelt sind um das Schreiben von Programmen zu ermöglichen bzw. zu erleichtern.<p>
+	<p class="Begriffe" id="quellcode">Quellcode: Ein Text, welcher in einer Programmiersprache geschrieben worden ist und von Menschen gelesen werden kann. Der Computer kann die verschiedenen Befehle einer Programmiersprache in sogenannter Maschinensprache übersetzten, welche dann von einem Computer ausgeführt werden kann. <p>
 	</div>
 	<div class="end" id="end">
 	<img class="img" src="Bilder/Logo.png">
