--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	<h2>Begriffserklärungen</h2>
 	</div>
 <div id="Begriffserklärungen" class="Begriffserklärungen">
-	<p class="Begriffe" id="ide">IDE: Entwicklungsumgebung in welcher die wichtigsten Werkzeuge und Hilfsmittel gesammelt sind um das Schreiben von Programmen zu ermöglichen bzw. zu erleichtern.<p>
+	<p class="Begriffe" id="ide">IDE/Entwicklungsumgebung: Entwicklungsumgebung in welcher die wichtigsten Werkzeuge und Hilfsmittel gesammelt sind um das Schreiben von Programmen zu ermöglichen bzw. zu erleichtern.<p>
 	<p class="Begriffe" id="quellcode">Quellcode: Ein Text, welcher in einer Programmiersprache geschrieben worden ist und von Menschen gelesen werden kann. Der Computer kann die verschiedenen Befehle einer Programmiersprache in sogenannter Maschinensprache übersetzten, welche dann von einem Computer ausgeführt werden kann. <p>
 	</div>
 	<div class="end" id="end">
