--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Python lernen" >
 	<meta name="author" content="Yves Bischofberger">
 	<meta charset="utf-8">
-	<meta name="keywords" content="Python, KSZ, lernen, Code, Yves Bischofberger">
+	<meta name="keywords" content="Python, KSZ, lernen, Code, Yves Bischofberger">	
 	<script src="CSS_JSS/script.js"></script>
 </head>
 <body onload="number()">
@@ -64,7 +64,9 @@
 
 	<div class="question">
 	<p>Wo liegt der Unterschied zwischen der Shell und dem normalen Editor? (max. 1P.)</p>
+	<button id="helpbutton1" class="helpbutton" onclick="help1(helpbuttontext1,helpbutton1)">?</button>
 	</div>
+	<p id="helpbuttontext1" class="hilfetext" style="display:none" >Hilfetext</p>
 	</br>
 	<div id="question1" value="unsolved" class="answers">
 	<input class="buttons" type="button" name="button1" value="" id="false" onclick="Question('button1')"><label class="answer" id="answer1">Die Shell ist der übergreifende Begriff(die Schale) der .s und damit auch des Editors.</label></br></br>
@@ -100,7 +102,8 @@
 	<div class="end" id="end">
 	<img class="img" src="Bilder/Logo.png">
 	<span>LearnPython.ch ist eine öffentliche Website, welche primär für die Schüler der Kantonsschule Zug zur Verfügung steht. Wir übernehmen keine Haftung für allfällige Fehler des Inhaltes und den daraus entstehenden Schäden.<br>Copyright &copy; Yves Bischofberger 2017</p>
-	</div><
+	</div>
+	</div>
 	</body>
 	</html>
-</div>
+
