--- a/index.html
+++ b/index.html
@@ -57,16 +57,15 @@
 		<div class="übertitel">
 		<h3>Erste Schritte mit der Python-IDLE</h3>
 	</div>
-	<div class="text">
+	<div id="shell"class="text">
 		<p>Wenn ihr nach der Installation die <a  href=#ide><span style="color:blue">Entwicklungsumgebung</span></a> nun öffnet (ihr könnt unter Windows nach "IDLE suchen und diese dann öffnen) findet ihr euch in der sogenannten Shell wieder. Die Shell ist normalerweise für den Anfang ganz in Ordnung, da man allerdings nur eine Linie eingeben kann. Wenn man in naher Zukunft auch vollwertige Programme programmieren möchte sollte man früher oder später vollwertige Programme schreiben und mit richtigen <a  href=#quellcode><span style="color:blue">Quellcode</span></a> arbeiten will, sollte man mit dem Editor arbeitet. Wenn ihr ein bereits erstelltes Dokument mit dem Editor bearbeiten wollt drückt ihr Control + O (oder über den Reiter File --> Open...) oder wenn ihr ein neues Dokument erstellen wollt müsst ihr, Control + N (oder File --> New File) drücken.  Jetzt seid ihr bereit, euer erstes Programm zu schreiben!
  </p>
 	</div>
 
 	<div class="question">
 	<p>Wo liegt der Unterschied zwischen der Shell und dem normalen Editor? (max. 1P.)</p>
-	<button id="helpbutton1" class="helpbutton" onclick="help1(helpbuttontext1,helpbutton1)">?</button>
+	<button id="helpbutton2"  class="helpbutton" onclick="help(shell,helpbutton2)">?</button>
 	</div>
-	<p id="helpbuttontext1" class="hilfetext" style="display:none" >Hilfetext</p>
 	</br>
 	<div id="question1" value="unsolved" class="answers">
 	<input class="buttons" type="button" name="button1" value="" id="false" onclick="Question('button1')"><label class="answer" id="answer1">Die Shell ist der übergreifende Begriff(die Schale) der .s und damit auch des Editors.</label></br></br>
@@ -76,11 +75,14 @@
 	</div>
 	<div class="question" id="question">
 	<p>Welchen Reiter müsstest du auswählen wenn du in der Python IDE ein bereits bestehender Sourcecode bearbeiten möchten würdest. (max. 1P.)</p>
+	<button id="helpbutton1"  class="helpbutton" onclick="help(helpbuttontext1,helpbutton1)">?</button>
 	</div>
+	<p id="helpbuttontext1" class="hilfetext" style="display:none" >Hilfetext</p>
 	<div id="question2" class="imagemap">
 	<div class="imagecontainer">
 	<img src="Bilder/idle.png" usemap="#IDEmap">
 	</div>
+	</br>
 <map name ="IDEmap">
 	<area shape="rect" coords="0,19,38,44" onclick="imagemapsolved()">
 	<area shape="rect" coords="39,19,315,43">
