--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div class="übertitel">
 		<h3>Die Empfehlenswerteste Python Entwicklungsumgebung</h3>
 	</div>
-	<div class="text">
+	<div class="text" id="scrollto">
 		<p>Es gibt viele verschiedene <a  href=#ide><span style="color:blue">Entwicklungsumgebungen</span></a>. Welche man Schlussendlich benutzt ist Geschmackssache, es gibt keine "beste" <a  href=#ide><span style="color:blue">IDE</span></a>. Für Anfänger ist die offiziell Python <a  href=#ide><span style="color:blue">IDE</span></a> zu empfehlen. Es hat viele Funktionen, welcher der Übersichtlichkeit des Quelltextes helfen. Dies ist, besonders für einen Anfänger, sicherlich nicht verkehrt. Zum Beispiel färbt die IDLE die verschiedenen Befehle mit verschiedenen Farben ein. Man kann es hier(Hyperlink: https://www.python.org/downloads/) herunterladen. </p>
 	</div>
 		</br></br></br>
@@ -62,7 +62,7 @@
 
 	<div class="question">
 	<p>Wo liegt der Unterschied zwischen der Shell und dem normalen Editor? (max. 1P.)</p>
-	<button id="helpbutton2"  class="helpbutton" onclick="help(shell,helpbutton2)">?</button>
+	<button id="helpbutton2"  class="helpbutton" onclick="help(shell,helpbutton2,scrollto)">?</button>
 	</div>
 	</br>
 	<div id="question1" value="unsolved" class="answers">
@@ -73,7 +73,7 @@
 	</div>
 	<div class="question" id="question">
 	<p>Welchen Reiter müsstest du auswählen wenn du in der Python IDE ein bereits bestehender Sourcecode bearbeiten möchten würdest. (max. 1P.)</p>
-	<button id="helpbutton1"  class="helpbutton" onclick="help(helpbuttontext1,helpbutton1)">?</button>
+	<button id="helpbutton1"  class="helpbutton" onclick="help(helpbuttontext1,helpbutton1,null)">?</button>
 	</div>
 	<p id="helpbuttontext1" class="hilfetext" style="display:none" >Hilfetext</p>
 	<div id="question2" class="imagemap">
