--- a/index.html
+++ b/index.html
@@ -8,51 +8,101 @@
 	<meta name="description" content="Python lernen" >
 	<meta name="author" content="Yves Bischofberger">
 	<meta charset="utf-8">
-	<meta name="keywords" content="Python, KSZ, lernen, Code, Yves Bischofberger">
+	<meta name="keywords" content="Python, KSZ, lernen, Code, Yves Bischofberger">	
 	<script src="CSS_JSS/script.js"></script>
 </head>
-<body>
+<body onload="number()">
 <div class="navigation">
 	<div class="navbar">
-	<a href="/index">
 	<img class="logo" src="Bilder/Logo.png">
-	</a>
 	<a href="/Grundlagen" class="link">Die Grundlagen des Programmierens</a>
-	<a href="/IDE" class="link">Die Entwicklungsumgebung</a>
-	<a href="/Erste_Schritte" class="link">Erste Schritte</a>	
+	<a href="/IDE" class="linkselected">Die Entwicklungsumgebung</a>
+	<a href="/Erste_Schritte" class="link">Erste Schritte</a>
 	<a href="/Struktur" class="link">Strukturierung eines Programmcodes</a>	
 	<a href="/Schleifenundverzweigungen" class="link">If-Verzweigungen und For-/While-Schleifen</a>
 	<a href="/AboutMe" class="link">About LearnPythonKSZ</a>
 	</div>
 	<div class="glossar">
-	<a href="/Glossar" class="linkglossarselected">Glossar</a>
+	<a href="/Glossar" class="linkglossar">Glossar</a>
 	</div>
 </div>
 <div class=main>
-</br>
 	<div class="heading">
-		<h1>Glossar</h1>
+		<h1>Die Integrierte Programmierentwicklung</h1>
 	</div>
-	</br></br>
-<div id="Begriffserklärungen" class="Glossarbegriffe">
 	<div class="übertitel">
-		<h3>IDE/Entwicklungsumgebung</h3>
+		<h3>Was ist eine IDE (Integrierte Programmierentwicklung)?</h3>
 	</div>
-	<div class="Glossarerklärung"><p>Entwicklungsumgebung in welcher die wichtigsten Werkzeuge und Hilfsmittel gesammelt sind um das Schreiben von Programmen zu ermöglichen bzw. zu erleichtern.</p></div>
-	<div class="Glossarlinks"><a href="https://learnpythonksz.github.io/IDE/">1</a></div>
+	<div class="text"> 
+		<p>Eine Integrated Development Environment (IDE) ist sozusagen das Word des Programmierens. Es sammelt die wichtigsten Werkzeuge für das erstellen von Programmiersoftware. Doch anstelle von Schriftgrösse, Schriftfarbe und die automatische Rechtschreibprüfung finden sich Programmierrelevantere Werkzeuge wie zum Beispiel das farbliche Hervorheben von bestimmten Befehlen oder eine Befehlsprüfung mit Vervollständigungsmöglichkeiten. Eine <a  href=#ide><span style="color:blue">Entwicklungsumgebung</span></a> besteht normalerweise aus einem Editor, Compiler/Interpreter, Linker, Debugger und einem GUI. Falls du noch keinen dieser Begriffe verstehst, keine Angst, sie werden jetzt erklärt. </p>
+	</div>
+	<div class="achtungheader">
+	<p>Achtung!</p>
+	</div>
+	<div class="achtung">
+	<p>Die wichtigsten Begriffe werden am <a href="#Begriffserklärungen">Seitenende</a> und Im <a href="/Glossar">Glossar</a> erklärt.</p>
+	</div>
 	</br>
-	<div class="übertitel">
-		<h3>Quellcode</h3>
+	<div class="text">
+		<p>Ein Editor ist, wie der Name schon impliziert, eine Anwendung in welcher man Text bearbeiten kann. Ein Compiler bzw. Interpreter übersetzt den von uns geschriebenen Programmtext in Maschinensprache, da der Computer nur mit Maschinensprache arbeiten kann. Der einzig grosse Unterschied zwischen einem Compiler und einem Interpreter ist, dass der Compiler den ganzen Programmtext auf einmal übersetzt, während der Interpreter den Programmtext Stück für Stück in Maschinencode übersetzt. Der Linker verbindet die einzelnen Programmmodule zu einem lauffähigen Programm. Die Aufgabe des Debuggers ist es Fehler im Programmcode zu erkennen und sie dem Benutzer mitzuteilen. Bei manchen <a  href=#ide><span style="color:blue">Entwicklungsumgebungen</span></a> zeigt es die Fehler, oft farbig markiert, direkt im <a  href=#quellcode><span style="color:blue">Quellcode</span></a> auf. Das Graphical User Interface (GUI) ist lediglich eine grafische Oberfläche, welche das Arbeiten mit dem Programm erleichtert. Dies erreicht das GUI mithilfe von verschiedenen Leisten, Knöpfen oder anderen Steuerelementen.  </p>
 	</div>
-	<div class="Glossarerklärung"><p>Ein Text, welcher in einer Programmiersprache geschrieben worden ist und von Menschen gelesen werden kann. Diese kann von einem Computer in Maschinensprache umgewandelt und verarbeitet werden.</p></div>
-	<div class="Glossarlinks"><a href="https://learnpythonksz.github.io/IDE/">1</a></div>
-</div>
-	</br></br></br></br></br></br>
-	</br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+	</br></br></br>
+		<div class="übertitel">
+		<h3>Die Empfehlenswerteste Python Entwicklungsumgebung</h3>
+	</div>
+	<div class="text" id="scrollto">
+		<p>Es gibt viele verschiedene <a  href=#ide><span style="color:blue">Entwicklungsumgebungen</span></a>. Welche man Schlussendlich benutzt ist Geschmackssache, es gibt keine "beste" <a  href=#ide><span style="color:blue">IDE</span></a>. Für Anfänger ist die offiziell Python <a  href=#ide><span style="color:blue">IDE</span></a> zu empfehlen. Es hat viele Funktionen, welcher der Übersichtlichkeit des Quelltextes helfen. Dies ist, besonders für einen Anfänger, sicherlich nicht verkehrt. Zum Beispiel färbt die IDLE die verschiedenen Befehle mit verschiedenen Farben ein. Man kann es hier(Hyperlink: https://www.python.org/downloads/) herunterladen. </p>
+	</div>
+		</br></br></br>
+		<div class="übertitel">
+		<h3>Erste Schritte mit der Python-IDLE</h3>
+	</div>
+	<div class="text">
+		<p>Wenn ihr nach der Installation die <a  href=#ide><span style="color:blue">Entwicklungsumgebung</span></a> nun öffnet (ihr könnt unter Windows nach "IDLE suchen und diese dann öffnen) findet ihr euch in der sogenannten Shell wieder.<span id="shell"> Die Shell ist normalerweise für den Anfang ganz in Ordnung, da man allerdings nur eine Linie eingeben kann ist es auf lange Sicht allerdings nicht optimal. Wenn man also in naher Zukunft auch grössere Programme programmieren möchte, und das ist hier klar ein Ziel, sollte man früher oder später vollwertige Programme schreiben und mit richtigen <a  href=#quellcode><span style="color:blue">Quellcode</span></a> arbeiten will, sollte man mit dem Editor arbeiten. </span> Wenn ihr ein bereits erstelltes Dokument mit dem Editor bearbeiten wollt drückt ihr Control + O (oder über den Reiter File --> Open...) oder wenn ihr ein neues Dokument erstellen wollt müsst ihr, Control + N (oder File --> New File) drücken.  Jetzt seid ihr bereit, euer erstes Programm zu schreiben!</span></p>	</div>
+
+	<div class="question">
+	<p>Wo liegt der Unterschied zwischen der Shell und dem normalen Editor? (max. 1P.)</p>
+	<button id="helpbutton2"  class="helpbutton" onclick="help(shell,helpbutton2,scrollto)">?</button>
+	</div>
+	</br>
+	<div id="question1" value="unsolved" class="answers">
+	<input class="buttons" type="button" name="button1" value="" id="false" onclick="Question('button1')"><label class="answer" id="answer1">Die Shell ist der übergreifende Begriff(die Schale) der .s und damit auch des Editors.</label></br></br>
+	<input class="buttons" type="button" name="button2" value="" id="false" onclick="Question('button2')"><label class="answer" id="answer2">Man kann beim Editor seine Arbeit nicht speichern</label></br></br>
+	<input class="buttons" type="button" name="button3" value="" id="false" onclick="Question('button3')"><label class="answer" id="answer3">Im gegensatz zum Editor kommt bei der Shell ein Interpreter zum Einsatz.</label></br></br>
+	<input class="buttons" type="button" name="button4" value="" id="true" onclick="Question('button4')"><label class="answer" id="answer4">Man kann bei der Shell nur eine Linie/Befehl auf einmal eingeben.</label> </br></br>	
+	</div>
+	<div class="question" id="question">
+	<p>Welchen Reiter müsstest du auswählen wenn du in der Python IDE ein bereits bestehender Sourcecode bearbeiten möchten würdest. (max. 1P.)</p>
+	<button id="helpbutton1"  class="helpbutton" onclick="help(helpbuttontext1,helpbutton1,null)">?</button>
+	</div>
+	<p id="helpbuttontext1" class="hilfetext" style="display:none" >Hilfetext</p>
+	<div id="question2" class="imagemap">
+	<div class="imagecontainer">
+	<img src="Bilder/idle.png" usemap="#IDEmap">
+	</div>
+	</br>
+<map name ="IDEmap">
+	<area shape="rect" coords="0,19,38,44" onclick="imagemapsolved()">
+	<area shape="rect" coords="39,19,315,43">
+	</map>
+	</div>
+	<p class="textpoint">Du hast momentan:&nbsp;<span id="point"></span>&nbsp;Punkte
+	</br>
+	<span id="unlocked">Du braucht noch <span id="diff"></span>&nbsp;Punkt(e) um das nächste Kapitel freizuschalten.</span></p>
+	<a href="#question" id="buttonhref">
+	<input class="nextlocked" type="button" id="next" value="Aufgabe noch nicht richtig gelöst.">
+	</a>
+	<div class="übertitel">
+	<h2>Begriffserklärungen</h2>
+	</div>
+<div id="Begriffserklärungen" class="Begriffserklärungen">
+	<p class="Begriffe" id="ide">IDE/Entwicklungsumgebung: Entwicklungsumgebung in welcher die wichtigsten Werkzeuge und Hilfsmittel gesammelt sind um das Schreiben von Programmen zu ermöglichen bzw. zu erleichtern.<p>
+	<p class="Begriffe" id="quellcode">Quellcode: Ein Text, welcher in einer Programmiersprache geschrieben worden ist und von Menschen gelesen werden kann. Der Computer kann die verschiedenen Befehle einer Programmiersprache in sogenannter Maschinensprache übersetzten, welche dann von einem Computer ausgeführt werden kann. <p>
+	</div>
 	<div class="end" id="end">
 	<img class="img" src="Bilder/Logo.png">
 	<span>LearnPython.ch ist eine öffentliche Website, welche primär für die Schüler der Kantonsschule Zug zur Verfügung steht. Wir übernehmen keine Haftung für allfällige Fehler des Inhaltes und den daraus entstehenden Schäden.<br>Copyright &copy; Yves Bischofberger 2017</p>
-	</div><
+	</div>
+	</div>
 	</body>
 	</html>
-</div>
