--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 	<input class="buttons" type="button" name="button3" value="" id="false" onclick="Question('button3')"><label class="answer" id="answer3">Im gegensatz zum Editor kommt bei der Shell ein Interpreter zum Einsatz.</label></br></br>
 	<input class="buttons" type="button" name="button4" value="" id="true" onclick="Question('button4')"><label class="answer" id="answer4">Man kann bei der Shell nur eine Linie/Befehl auf einmal eingeben.</label> </br></br>	
 	</div>
+	<button id="solutionbutton1"  class="solutionbutton" onclick="solution(solutionbutton1)"><span id="solutiontag1">Lösung anzeigen</span><span id="solution1" class="solution"><br>TEXTTEXT AUCH MIT ABSTAND UND TEXT 12 1212312312312312312</span></button>
 	<div class="question" id="question">
 	<p>Welchen Reiter müsstest du auswählen wenn du in der Python IDE ein bereits bestehender Sourcecode bearbeiten möchten würdest. (max. 1P.)</p>
 	<button id="helpbutton1"  class="helpbutton" onclick="help(helpbuttontext1,helpbutton1,null)">?</button>
@@ -86,7 +87,10 @@
 	<area shape="rect" coords="0,19,38,44" onclick="imagemapsolved()">
 	<area shape="rect" coords="39,19,315,43">
 	</map>
+	<button id="solutionbutton2"  class="solutionbutton" onclick="solution(solutionbutton2)"><span id="solutiontag2"></span>Lösung anzeigen<span id="solution2" class="solution"><br>TEXTTEXT AUCH MIT ABSTAND UND TEXT</span></button>
 	</div>
+	<br>
+	<br>
 	<p class="textpoint">Du hast momentan:&nbsp;<span id="point"></span>&nbsp;Punkte
 	</br>
 	<span id="unlocked">Du braucht noch <span id="diff"></span>&nbsp;Punkt(e) um das nächste Kapitel freizuschalten.</span></p>
