--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<area shape="rect" coords="0,19,38,44" onclick="imagemapsolved()">
 	<area shape="rect" coords="39,19,315,43">
 	</map>
-	<button id="solutionbutton2"  class="solutionbutton" onclick="solution(solutionbutton2)"><span id="solutiontag2"></span>Lösung anzeigen<span id="solution2" class="solution"><br>Lösungstext</span></button>
+	<button id="solutionbutton2"  class="solutionbutton" onclick="solution(solutionbutton2)"><span id="solutiontag2"></span>Lösung anzeigen<span id="solution2" class="solution"><br>Wie bereits oben geschrieben wurde, öffnet man ein bereits bestehendes Dokument, gleich wie zum Beispiel in Word und vielen anderen, verbreiteten Editoren, über den Reiter "File"/"Datei" und wählt dort die Option "open"/"öffnen" aus. Deshalb muss man den Reiter "File" auswählen.</span></button>
 	</div>
 	<br>
 	<br>
