--- a/index.html
+++ b/index.html
@@ -73,7 +73,16 @@
 	<input class="buttons" type="button" name="button4" value="" id="true" onclick="Question('button4')"><label class="answer" id="answer4">Man kann bei der Shell nur eine Linie/Befehl auf einmal eingeben.</label> </br></br>	
 	</div>
 	<button id="solutionbutton1"  class="solutionbutton" onclick="solution(solutionbutton1)"><span id="solutiontag1">Lösung anzeigen</span><span id="solution1" class="solution">Lösungstext</span></button>
-	<div class="question" id="question">
+	<div class="question">
+	<p>Welche dieser Aussagen ist wahr? (max. 1P.)</p>
+	</div>
+	<div class="answers">
+	<input class="buttons" type="button" name="button5" value="" id="false" onclick="Question2('button5')"><label class="answer" id="answer5"> Eine IDE besteht aus verschiedenen Werkzeugen wie Sourcecode, Debugger und Compiler.</label></br></br>
+	<input class="buttons" type="button" name="button6" value="" id="true" onclick="Question2('button6')"><label class="answer" id="answer6"> Das GUI ist ein Bestandteil der offiziellen Python-IDLE.</label></br></br>
+	<input class="buttons" type="button" name="button7" value="" id="false" onclick="Question2('button7')"><label class="answer" id="answer7"> Die offizielle Python IDE, wurde von Microsoft entwickelt und ist deshalb bereits auf Windows vorinstalliert.</label></br></br>
+	<input class="buttons" type="button" name="button8" value="" id="false" onclick="Question2('button8')"><label class="answer" id="answer8"> Für Anfänger ist die IDE zu empfehlen, für die Personen mit fortgeschrittenem Wissen ist die IDLE allerdings die bessere Wahl, da man mit ihr viel mehr Möglichkeiten hat.</label> </br></br>	
+	</div>
+<div class="question" id="question">
 	<p>Welchen Reiter müsstest du auswählen wenn du in der Python IDE ein bereits bestehender Sourcecode bearbeiten möchten würdest. (max. 1P.)</p>
 	<button id="helpbutton1"  class="helpbutton" onclick="help(helpbuttontext1,helpbutton1,null)">?</button>
 	</div>
