--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 	<div class="question">
 	<p>Wo liegt der Unterschied zwischen der Shell und dem normalen Editor? (max. 1P.)</p>
-	<button id="helpbutton2"  class="helpbutton" onclick="help(shell,helpbutton2,scrollto)">?</button>
+	<button id="helpbutton2" value="scrollto" class="helpbutton" onclick="help(shell,helpbutton2,scrollto)">?</button>
 	</div>
 	</br>
 	<div id="question1" value="unsolved" class="answers">
