--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 	<button id="solutionbutton1"  class="solutionbutton" onclick="solution(solutionbutton1)"><span id="solutiontag1">Lösung anzeigen</span><span id="solution1" class="solution">Lösungstext</span></button>
 	<div class="question">
 	<p>Welche dieser Aussagen ist wahr? (max. 1P.)</p>
+	<button id="helpbutton1"  class="helpbutton" onclick="help(helpbuttontext2,helpbutton1,null)">?</button>
 	</div>
+	<p id="helpbuttontext2" class="hilfetext2" style="display:none" >Hilfetext</p>
 	<div class="answers">
 	<input class="buttons" type="button" name="button5" value="" id="false" onclick="Question2('button5')"><label class="answer" id="answer5"> Eine IDE besteht aus verschiedenen Werkzeugen wie Sourcecode, Debugger und Compiler.</label></br></br>
 	<input class="buttons" type="button" name="button6" value="" id="true" onclick="Question2('button6')"><label class="answer" id="answer6"> Das GUI ist ein Bestandteil der offiziellen Python-IDLE.</label></br></br>
