--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 	<input class="buttons" type="button" name="button7" value="" id="false" onclick="Question2('button7')"><label class="answer" id="answer7"> Die offizielle Python IDE, wurde von Microsoft entwickelt und ist deshalb bereits auf Windows vorinstalliert.</label></br></br>
 	<input class="buttons" type="button" name="button8" value="" id="false" onclick="Question2('button8')"><label class="answer" id="answer8"> Für Anfänger ist die IDE zu empfehlen, für die Personen mit fortgeschrittenem Wissen ist die IDLE allerdings die bessere Wahl, da man mit ihr viel mehr Möglichkeiten hat.</label> </br></br>	
 	</div>
+	<button id="solutionbutton3"  class="solutionbutton" onclick="solution(solutionbutton3)"><span id="solutiontag3">Lösung anzeigen</span><span id="solution3" class="solution">Lösungstext2</span></button>
 <div class="question" id="question">
 	<p>Welchen Reiter müsstest du auswählen wenn du in der Python IDE ein bereits bestehender Sourcecode bearbeiten möchten würdest. (max. 1P.)</p>
 	<button id="helpbutton1"  class="helpbutton" onclick="help(helpbuttontext1,helpbutton1,null)">?</button>
