--- a/index.html
+++ b/index.html
@@ -72,24 +72,24 @@
 	<input class="buttons" type="button" name="button3" value="" id="false" onclick="Question1('button3')"><label class="answer" id="answer3">Im gegensatz zum Editor kommt bei der Shell ein Interpreter zum Einsatz.</label></br></br>
 	<input class="buttons" type="button" name="button4" value="" id="true" onclick="Question1('button4')"><label class="answer" id="answer4">Man kann bei der Shell nur eine Linie/Befehl auf einmal eingeben.</label> </br></br>	
 	</div>
-	<button id="solutionbutton1"  class="solutionbutton" onclick="solution(solutionbutton1)"><span id="solutiontag1">Lösung anzeigen</span><span id="solution1" class="solution">Lösungstext</span></button>
+	<button id="solutionbutton1"  class="solutionbutton" onclick="solution(solutionbutton1)"><span id="solutiontag1">Lösung anzeigen</span><span id="solution1" class="solution">Die letzte Aussage ist wahr. Es sollte klar aus dem letzten Abschnitt hervorgehen.</span></button>
 	<div class="question">
 	<p>Welche dieser Aussagen ist wahr? (max. 1P.)</p>
 	<button id="helpbutton3" class="helpbutton" onclick="help(helpbuttontext2,helpbutton3,null)">?</button>
 	</div> 
-	<p id="helpbuttontext2" class="hilfetext" style="display:none" >Hilfetext2</p>
+	<p id="helpbuttontext2" class="hilfetext" style="display:none" >Lese die Aussagen genau durch und überlege dir genau, ob dieses Wort in diesem Zusammenhang Sinn macht.</p>
 	<div class="answers">
 	<input class="buttons" type="button" name="button5" value="" id="false" onclick="Question2('button5')"><label class="answer" id="answer5"> Eine IDE besteht aus verschiedenen Werkzeugen wie Sourcecode, Debugger und Compiler.</label></br></br>
 	<input class="buttons" type="button" name="button6" value="" id="true" onclick="Question2('button6')"><label class="answer" id="answer6"> Das GUI ist ein Bestandteil der offiziellen Python-IDLE.</label></br></br>
 	<input class="buttons" type="button" name="button7" value="" id="false" onclick="Question2('button7')"><label class="answer" id="answer7"> Die offizielle Python IDE, wurde von Microsoft entwickelt und ist deshalb bereits auf Windows vorinstalliert.</label></br></br>
 	<input class="buttons" type="button" name="button8" value="" id="false" onclick="Question2('button8')"><label class="answer" id="answer8"> Für Anfänger ist die IDE zu empfehlen, für die Personen mit fortgeschrittenem Wissen ist die IDLE allerdings die bessere Wahl, da man mit ihr viel mehr Möglichkeiten hat.</label> </br></br>	
 	</div>
-	<button id="solutionbutton3"  class="solutionbutton" onclick="solution(solutionbutton3)"><span id="solutiontag3">Lösung anzeigen</span><span id="solution3" class="solution">Lösungstext2</span></button>
+	<button id="solutionbutton3"  class="solutionbutton" onclick="solution(solutionbutton3)"><span id="solutiontag3">Lösung anzeigen</span><span id="solution3" class="solution">Die erste Aussage ist falsch, da der Sourcecode nichts mit einer IDE zu tun hat. Ausserdem ist die zweitletzte Aussage falsch, da die Python IDE nicht auf Windows vorinstalliert ist (sonst müsste man es wohl kaum herunterladen). Ausserdem ist die Python IDLE eine DIE (Integrated Development Environment)</span></button>
 <div class="question" id="question">
 	<p>Welchen Reiter müsstest du auswählen wenn du in der Python IDE ein bereits bestehender Sourcecode bearbeiten möchten würdest. (max. 1P.)</p>
 	<button id="helpbutton1"  class="helpbutton" onclick="help(helpbuttontext1,helpbutton1,null)">?</button>
 	</div>
-	<p id="helpbuttontext1" class="hilfetext" style="display:none" >Hilfetext</p>
+	<p id="helpbuttontext1" class="hilfetext" style="display:none" >Lese den letzten Abschnitt nochmal, überlege dir alternativ, wie du es bei verbreiteten Editoren, wie zum Beispiel Word, machen würdest.</p>
 	<div id="question2" class="imagemap">
 	<div class="imagecontainer">
 	<img src="Bilder/idle.png" usemap="#IDEmap">
