--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<a href="/IDE" class="linkselected">Die Entwicklungsumgebung</a>
 	<a href="/Erste_Schritte" class="link">Erste Schritte</a>
 	<a href="/Struktur" class="link">Strukturierung eines Programmcodes</a>	
-	<a href="/Schleifenundverzweigungen" class="link">If-Verzweigungen und For-/While-Schleifen</a>
+	<a href="/Schleifenundverzweigungen" class="link">Schleifen und Verzweigungen</a>
 	<a href="/AboutMe" class="link">About LearnPythonKSZ</a>
 	</div>
 	<div class="glossar">
