--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<button id="helpbutton3" class="helpbutton" onclick="help(helpbuttontext2,helpbutton3,null)">?</button>
 	</div> 
 	<p id="helpbuttontext2" class="hilfetext" style="display:none" >Lese die Aussagen genau durch und überlege dir genau, ob dieses Wort in diesem Zusammenhang Sinn macht.</p>
-	<div class="answers">
+	<div class="answers2">
 	<input class="buttons" type="button" name="button5" value="" id="false" onclick="Question2('button5')"><label class="answer" id="answer5"> Eine IDE besteht aus verschiedenen Werkzeugen wie Sourcecode, Debugger und Compiler.</label></br></br>
 	<input class="buttons" type="button" name="button6" value="" id="true" onclick="Question2('button6')"><label class="answer" id="answer6"> Das GUI ist ein Bestandteil der offiziellen Python-IDLE.</label></br></br>
 	<input class="buttons" type="button" name="button7" value="" id="false" onclick="Question2('button7')"><label class="answer" id="answer7"> Die offizielle Python IDE, wurde von Microsoft entwickelt und ist deshalb bereits auf Windows vorinstalliert.</label></br></br>
