--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<h3>Was ist eine IDE (Integrierte Programmierentwicklung)?</h3>
 	</div>
 	<div class="text"> 
-		<p>Eine Integrated Development Environment (IDE) ist das Word des Programmierens. Es sammelt die wichtigsten Werkzeuge für das erstellen von Programmiersoftware. Doch anstelle von Schriftgrösse, Schriftfarbe und die automatische Rechtschreibprüfung finden sich Programmierrelevantere Werkzeuge wie zum Beispiel das farbliche Hervorheben von bestimmten Befehlen oder eine Befehlsprüfung mit Vervollständigungsmöglichkeiten. Eine <a  href=#ide><span style="color:blue">Entwicklungsumgebung</span></a> besteht normalerweise aus einem Editor, Compiler/Interpreter, Linker, Debugger und einem GUI. Falls du noch keinen dieser Begriffe verstehst, keine Angst, sie werden jetzt erklärt. </p>
+		<p>Eine Integrated Development Environment (IDE) ist das Word des Programmierens. Es sammelt die wichtigsten Werkzeuge für das erstellen von Programmiersoftware. Doch anstelle von Schriftgrösse, Schriftfarbe und die automatische Rechtschreibprüfung finden sich Programmierrelevantere Werkzeuge wie zum Beispiel das farbliche Hervorheben von bestimmten Befehlen oder eine Befehlsprüfung mit Vervollständigungsmöglichkeiten. Eine <a  href=#ide><span style="color:blue">Entwicklungsumgebung</span></a> besteht normalerweise aus einem Editor, Compiler/Interpreter, Linker, Debugger und einem GUI. Falls du noch keinen dieser Begriffe verstehst, keine Angst, sie werden nun erklärt. </p>
 	</div>
 	<div class="achtungheader">
 	<p>Achtung!</p>
@@ -49,10 +49,10 @@
 	</div>
 	</br></br></br>
 		<div class="übertitel">
-		<h3>Die Empfehlenswerteste Python Entwicklungsumgebung</h3>
+		<h3>Die empfehlenswerteste Python Entwicklungsumgebung</h3>
 	</div>
 	<div class="text" id="scrollto">
-		<p>Es gibt viele verschiedene <a  href=#ide><span style="color:blue">Entwicklungsumgebungen</span></a>. Welche man Schlussendlich benutzt ist Geschmackssache, es gibt keine "beste" <a  href=#ide><span style="color:blue">IDE</span></a>. Für Anfänger ist die offiziell Python <a  href=#ide><span style="color:blue">IDE</span></a> zu empfehlen. Es hat viele Funktionen, welcher der Übersichtlichkeit des Quelltextes helfen. Dies ist, besonders für einen Anfänger, sicherlich nicht verkehrt. Zum Beispiel färbt die IDLE die verschiedenen Befehle mit verschiedenen Farben ein. Man kann sie <a href="https://www.python.org/downloads/" target="_blank">hier</a> herunterladen. </p>
+		<p>Es gibt viele verschiedene <a  href=#ide><span style="color:blue">Entwicklungsumgebungen (IDEs)</span></a>. Welche man Schlussendlich benutzt ist Geschmackssache, es gibt keine "beste" <a  href=#ide><span style="color:blue">IDE</span></a>. Für Anfänger ist die offiziell Python <a  href=#ide><span style="color:blue">IDE</span></a> zu empfehlen. Es hat viele Funktionen, welcher der Übersichtlichkeit des Quelltextes helfen. Dies ist, besonders für einen Anfänger, sicherlich nicht verkehrt. Zum Beispiel färbt die IDLE die verschiedenen Befehle mit verschiedenen Farben ein. Man kann sie <a href="https://www.python.org/downloads/" target="_blank">hier</a> herunterladen. </p>
 	</div>
 		</br></br></br>
 		<div class="übertitel">
