--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body onload="number()">
 <div class="navigation">
 	<div class="navbar">
+	<a href="/index">
 	<img class="logo" src="Bilder/Logo.png">
+	</a>
 	<a href="/Grundlagen" class="link">Die Grundlagen des Programmierens</a>
 	<a href="/IDE" class="linkselected">Die Entwicklungsumgebung</a>
 	<a href="/Erste_Schritte" class="link">Erste Schritte</a>
