--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	</div>
 	<p id="helpbuttontext1" class="hilfetext" style="display:none" >Lese den letzten Abschnitt nochmal, überlege dir alternativ, wie du es bei verbreiteten Editoren, wie zum Beispiel Word, machen würdest.</p>
 	<div id="question2" class="imagemap">
-	<div class="imagecontainer">
+	<div class="imagecontainer" id="imagecontainer">
 	<img src="Bilder/idle.png" usemap="#IDEmap">
 	</div>
 	</br>
