--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
 	</div>
 	</br>
 <map name ="IDEmap">
-	<area shape="rect" coords="0,19,38,44" onclick="imagemapsolved()">
-	<area shape="rect" coords="39,19,315,43">
-	</map>
+    <area coords="0,21,36,44" shape="rect" onclick="imagemapsolved()">
+    <area coords="36,20,400,43" shape="rect" onclick="imagemapwrong()">
+    <area coords="2,2,400,20" shape="rect" onclick="imagemapwrong()">
+</map>
 	</div>
 	<button id="solutionbutton2"  class="solutionbutton" onclick="solution(solutionbutton2)"><span id="solutiontag2">Lösung anzeigen</span><span id="solution2" class="solution">Wie bereits oben geschrieben wurde, öffnet man ein bereits bestehendes Dokument, gleich wie zum Beispiel in Word und vielen anderen, verbreiteten Editoren, über den Reiter "File"/"Datei" und wählt dort die Option "open"/"öffnen" aus. Deshalb muss man den Reiter "File" auswählen.</span></button>
 	<br>
