--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<p>Wenn ihr nach der Installation die <a  href=#ide><span style="color:blue">Entwicklungsumgebung</span></a> nun öffnet (ihr könnt unter Windows nach "IDLE suchen und diese dann öffnen) findet ihr euch in der sogenannten Shell wieder.<span id="shell"> Die Shell ist normalerweise für den Anfang ganz in Ordnung, da man allerdings nur eine Linie eingeben kann, ist es auf lange Sicht allerdings nicht optimal.</span> Wenn man also in naher Zukunft auch grössere Programme programmieren möchte, und das ist hier klar ein Ziel, sollte man früher oder später vollwertige Programme schreiben und mit richtigen <a  href=#quellcode><span style="color:blue">Quellcode</span></a> arbeiten will, sollte man mit dem Editor arbeiten. Wenn ihr ein bereits erstelltes Dokument mit dem Editor bearbeiten wollt drückt ihr Control + O (oder über den Reiter File --> Open...) oder wenn ihr ein neues Dokument erstellen wollt, müsst ihr, Control + N (oder File --> New File) drücken.  Jetzt seid ihr bereit, euer erstes Programm zu schreiben!</span></p>	</div>
 
 	<div class="question">
-	<p>Wo liegt der Unterschied zwischen der Shell und dem normalen Editor? (max. 1P.)</p>
+	<p>Wo liegt der Unterschied zwischen der Shell und dem normalen Editor? (<span id="pointquestion1"></span>/1P.)</p>
 	<button id="helpbutton2" value="scrollto" class="helpbutton" onclick="help(shell,helpbutton2,scrollto)">?</button>
 	</div>
 	</br>
@@ -76,7 +76,7 @@
 	</div>
 	<button id="solutionbutton1"  class="solutionbutton" onclick="solution(solutionbutton1)"><span id="solutiontag1">Lösung anzeigen</span><span id="solution1" class="solution">Die letzte Aussage ist wahr. Es sollte klar aus dem letzten Abschnitt hervorgehen.</span></button>
 	<div class="question">
-	<p>Welche dieser Aussagen ist wahr? (max. 1P.)</p>
+	<p>Welche dieser Aussagen ist wahr? (<span id="pointquestion2"></span>/1P.)</p>
 	<button id="helpbutton3" class="helpbutton" onclick="help(helpbuttontext2,helpbutton3,null)">?</button>
 	</div> 
 	<p id="helpbuttontext2" class="hilfetext" style="display:none" >Lese die Aussagen genau durch und überlege dir genau, ob dieses Wort in diesem Zusammenhang Sinn macht.</p>
@@ -88,7 +88,7 @@
 	</div>
 	<button id="solutionbutton3"  class="solutionbutton" onclick="solution(solutionbutton3)"><span id="solutiontag3">Lösung anzeigen</span><span id="solution3" class="solution">Die erste Aussage ist falsch, da der Sourcecode nichts mit einer IDE zu tun hat. Ausserdem ist die zweitletzte Aussage falsch, da die Python IDE nicht auf Windows vorinstalliert ist (sonst müsste man es wohl kaum herunterladen). Ausserdem ist die Python IDLE eine DIE (Integrated Development Environment)</span></button>
 <div class="question" id="question">
-	<p>Welchen Reiter müsstest du auswählen wenn du in der Python IDE ein bereits bestehender Sourcecode bearbeiten möchten würdest. (max. 1P.)</p>
+	<p>Welchen Reiter müsstest du auswählen wenn du in der Python IDE ein bereits bestehender Sourcecode bearbeiten möchten würdest. (<span id="pointimagemap"></span>/1P.)</p>
 	<button id="helpbutton1"  class="helpbutton" onclick="help(helpbuttontext1,helpbutton1,null)">?</button>
 	</div>
 	<p id="helpbuttontext1" class="hilfetext" style="display:none" >Lese den letzten Abschnitt nochmal, überlege dir alternativ, wie du es bei verbreiteten Editoren, wie zum Beispiel Word, machen würdest.</p>
